test/pass/if.rnp
if 1 == 1 {}

if 1 == 1 {} else {}

if 1 == 1 {
} else if 2 == 2 {
} else {
}

let a = if true {
  1
} else {
  2
};
---
1 1 == if{ }

1 1 == if{ } els{ }

1 1 == if{ } els{ 2 2 == if{ } els{ } }

1 if{ 1 } els{ 2 } sp0
